--- a/23년1월TIL.MD
+++ b/23년1월TIL.MD
@@ -12,3 +12,23 @@
    - session
    - JWT (JSON WEB TOKEN)
    - OAuth
+
+# 1월 12일 TIL (면접 스터디 회의)
+- 앞으로 진행할 면접 스터디를 어떻게 진행할지에 대해 회의를 함
+**회의 내용**
+1월 27일 금요일 2시 첫 모임
+- 1분 자기소개
+- 내 이력서 기준 모의 면접
+- 본인의 목표 회사 1곳 설명할 수 있을 정도로 알아보고 가져오기
+
+1. 내 이력서 출력 후 모의면접
+2. 매주 금요일or토요일 2시경 모임
+3. 교안 면접질문
+4. 줌으로도 연습하기
+5. 노션 생성
+    - 피드백 양식 만들기 (단점, 장점, 보완할 점)
+    - 인터뷰 경험 작성
+
+면접 컨벤션
+1. 무조건 실전처럼 하기
+2. 피드백시 공격적으로 안하기
