23년1월 TIL 업데이트(날짜 수정)

--- a/23년1월TIL.MD
+++ b/23년1월TIL.MD
@@ -13,7 +13,7 @@
    - JWT (JSON WEB TOKEN)
    - OAuth
 
-# 1월 12일 TIL (면접 스터디 회의)
+## 1월 15일 TIL (면접 스터디 회의)
 - 앞으로 진행할 면접 스터디를 어떻게 진행할지에 대해 회의를 함
 **회의 내용**
 1월 27일 금요일 2시 첫 모임
