23년 1월 16일 TIL 업데이트
23년 1월 16일 TIL 업데이트

--- a/23년1월TIL.MD
+++ b/23년1월TIL.MD
@@ -32,3 +32,15 @@
 면접 컨벤션
 1. 무조건 실전처럼 하기
 2. 피드백시 공격적으로 안하기
+
+## 1월 16일 TIL
+- 알바를 하는 날이라 공부를 많이 하지 못함.
+- 유데미 NodeJS 강의를 일부 들음.
+   - http 모듈을 사용해봄
+   - nodeJS에서 body를 송수신할때는 버퍼를 이용함. 이것을 버퍼 객체, toString 등을 이용해서 바꿔줄 수 있음 (bodyParser가 왜 필요한지 나오는 듯)
+   - 비동기적 상황을 잘 이해하고 코딩해야 함. 서버차원에서 새롭게 느꼈음.
+   - url을 작성할때 '/message'와 같이 슬래시를 빼먹지 말자. (이것때문에 오랫동안 고생함)
+- 백준 4문제 가량을 풀었음.
+   - 주사위 문제는 내 식으로 한번 처음부터 끝까지 고쳐볼 필요가 있음.
+   - input을 정제한 후 프로그래머스처럼 solution을 만들어서 푸는 것이 상당히 매력적임을 알게되었음.
+
