--- a/23년1월TIL.MD
+++ b/23년1월TIL.MD
@@ -44,3 +44,13 @@
    - 주사위 문제는 내 식으로 한번 처음부터 끝까지 고쳐볼 필요가 있음.
    - input을 정제한 후 프로그래머스처럼 solution을 만들어서 푸는 것이 상당히 매력적임을 알게되었음.
 
+## 1월 17일 TIL
+- 알바를 마무리하는 날이다.
+- 판교의 한 회사에서 면접제의가 왔고, 스터디 모임 면접에도 통과해서 스터디도 함께 하게 되었다.
+- 한 회사의 CTO께서 본인의 시간을 할애하여 면접을 봐주시는 것이니 준비를 빡세게 해야함을 느꼈다.
+- 일단 내일은 내 스스로에게 질문을 세가지 해볼 생각이다.
+### 스스로 하는 질문
+1. 나는 왜 개발자가 되고 싶은가?
+2. 왜 프론트엔드 개발자로 지원했는가?
+3. 어떤 개발자가 되고 싶은가?
+- 알고리즘에서는 **유클리드 호제법**을 문제에 도입해보고자 한다. 프로그래머스 0레벨이다.
