--- a/23년1월TIL.MD
+++ b/23년1월TIL.MD
@@ -56,7 +56,7 @@
 - 알고리즘에서는 **유클리드 호제법**을 문제에 도입해보고자 한다. 프로그래머스 0레벨이다.
 
 ## 1월 18일 TIL
-- 백준을 풀기위해 만든 나만의 풀이법
+### 백준을 프로그래머스처럼 풀기 위한 방법
 - **readline**이나 **fs.readFileSync**의 활용법을 다 깨우친 상태에서
 - 입력된 값을 사용할 수 있도록 parse한 상태로
 - 별도의 문제풀이를 위한 solution 함수를 만들어 문제를 해결한다.
