23년 1월 19일 TIL 업데이트
23년 1월 19일 TIL 업데이트

--- a/23년1월TIL.MD
+++ b/23년1월TIL.MD
@@ -61,3 +61,19 @@
 - 입력된 값을 사용할 수 있도록 parse한 상태로
 - 별도의 문제풀이를 위한 solution 함수를 만들어 문제를 해결한다.
 - 위와 같이 자료를 가공한다면 백준도 프로그래머스처럼 풀 수 있다.
+
+## 1월 19일 TIL
+- 이벤트루프에 대해 블로그에 포스팅함. https://2duckchun.tistory.com/362
+### npm 스크립트의 이해
+- NPM : node package manager
+- 코어 모듈 : npm으로 설치하지 않아도 사용할 수 있는 NodeJS 기본 모듈
+- 3rd Party 모듈 : 노드 코어모듈이 아닌 npm으로 설치해야 하는 패키지
+- npm start를 설정하면 좋은 이유
+   1. 프로젝트를 공유할 때, 팀원들이 entry를 찾을 수고를 덜어줌.
+   2. 프로그램을 실행시킬 때 작업 폴더에서 npm start만 입력하면 되므로 개발 시간을 약간 단축시켜 줄 수 있음.
+- npm start는 특별한 스니펫이며,
+- package.json에서 설정한 npm 실행 스크립트는 **npm run 스크립트** 형식으로 입력해야함.
+### npm install
+- --save : 패키지가 프로덕션 의존성으로 설치되며, 실제로 코드 안에서 사용하고 작업하는 패키지.
+- -dev : 단순히 개발에서만 사용 (ex. nodemon)
+- -g : 단순히 글로벌 설치로써 머신 전체에 다운로드 받아 어디에서든지 사용가능하게 해줌.
