23년 1월 19일 TIL 업데이트
23년 1월 19일 TIL 업데이트

--- a/23년1월TIL.MD
+++ b/23년1월TIL.MD
@@ -71,9 +71,11 @@
 - npm start를 설정하면 좋은 이유
    1. 프로젝트를 공유할 때, 팀원들이 entry를 찾을 수고를 덜어줌.
    2. 프로그램을 실행시킬 때 작업 폴더에서 npm start만 입력하면 되므로 개발 시간을 약간 단축시켜 줄 수 있음.
-- npm start는 특별한 스니펫이며,
-- package.json에서 설정한 npm 실행 스크립트는 **npm run 스크립트** 형식으로 입력해야함.
+- npm start는 특별한 스니펫이며, npm start를 제외한 npm 실행 스크립트는 **npm run 스크립트** 형식으로 입력해야함.
 ### npm install
 - --save : 패키지가 프로덕션 의존성으로 설치되며, 실제로 코드 안에서 사용하고 작업하는 패키지.
 - -dev : 단순히 개발에서만 사용 (ex. nodemon)
 - -g : 단순히 글로벌 설치로써 머신 전체에 다운로드 받아 어디에서든지 사용가능하게 해줌.
+### 백준 브론즈3 승급
+- 2문제를 풀었음.
+- 날잡고 딥하게 들어가서 많은 문제를 해결하고 풀이법을 머릿속에 각인해야 할 필요성을 느낌.
