23년 1월 20일 TIL 업데이트
23년 1월 20일 TIL 업데이트

--- a/23년1월TIL.MD
+++ b/23년1월TIL.MD
@@ -79,3 +79,33 @@
 ### 백준 브론즈3 승급
 - 2문제를 풀었음.
 - 날잡고 딥하게 들어가서 많은 문제를 해결하고 풀이법을 머릿속에 각인해야 할 필요성을 느낌.
+
+## 1월 20일 TIL
+
+**express**
+
+미들웨어
+- app.use -> 모든 request를 다 받을 수 있고, next()를 통해 다음 미들웨어로 데이터를 넘겨주는 역할을 함
+- 문법 : app.use([경로], (req, res, next) => {})
+- app.get/post/delete 등등 : http method를 처리할 수 있음.
+- 문법 : app.method([경로], (req, res, next) => {})
+
+**summary**
+
+what is Express.js?
+- Express.js is Nodejs framework package that adds a bunch of untility functions and tools and a clear set of rules on how the app should be built.
+- It's highly extensible and other packages can be plugged into it (middleware)
+
+middleware, next(), and res()
+- Express.js relies heavily on middleware function - you can easily add them by calling use()
+- Middleware functions handle a request and should call next() to forward the request to the next function in line or send a response
+
+Routing
+- You can filter request by path and method
+- If you filter by method, paths are matched exactly, otherwise, the first segment of a URL is matched.
+- You can use the express.Router to split your routes across files elegantely
+
+Serve Files
+- You're not limited to serving dummy text as a response
+- You can sendFile()s to your users (e.g. HTML files)
+- If a request is directly made for a file (e.g. css file , js requested), you can enable static serving for such files via express.static()
