23년 1월 21일 TIL 업데이트
23년 1월 21일 TIL 업데이트

--- a/23년1월TIL.MD
+++ b/23년1월TIL.MD
@@ -109,3 +109,14 @@ Serve Files
 - You're not limited to serving dummy text as a response
 - You can sendFile()s to your users (e.g. HTML files)
 - If a request is directly made for a file (e.g. css file , js requested), you can enable static serving for such files via express.static()
+
+## 1월 21일 TIL
+- 면접보는 곳에서 vue를 스택으로 사용한다고 하여 공식문서(튜토리얼)를 보고 공부를 했다.
+- 뷰는 선언형 프로그래밍으로, 확장자는 .vue이며 SFC(싱글 파일 컴포넌트, html, css, js를 하나의 파일로 다룸)을 사용한다.
+- 컴포넌트는 Options API와 Composition API로 나눌 수 있으며 Options API는 리액트의 클래스 컴포넌트와 비슷하고, Composition API는 리액트의 함수형 컴포넌트와 비슷하다.
+- v-접두사와 함께 정해진 기능을 사용할 수 있는데 다소 경직되어있지만 효율적으로 보이기도 했다.
+
+백준
+- 더하기 사이클 이라는 문제를 풀었는데 어떻게 풀어가야하는지 머리에 짜여지긴 했어도 코드로 풀어내긴 어려웠다.
+- 데이터를 parse하는 것에 편리한 기능이 많이 있음을 계속 상기해야겠다.
+- 더불어, 연산자(Operator) 공부를 다시 해야할 것 같다.
