--- a/23년1월TIL.MD
+++ b/23년1월TIL.MD
@@ -120,3 +120,13 @@ Serve Files
 - 더하기 사이클 이라는 문제를 풀었는데 어떻게 풀어가야하는지 머리에 짜여지긴 했어도 코드로 풀어내긴 어려웠다.
 - 데이터를 parse하는 것에 편리한 기능이 많이 있음을 계속 상기해야겠다.
 - 더불어, 연산자(Operator) 공부를 다시 해야할 것 같다.
+
+## 1월 26일 TIL
+- 아 어제 술을 너무 많이 마셨다. 앞으로는 적당히 마셔야지..
+- 지성님이 추천해주신 리액트 스터디 첫 날이었다.
+### 오늘 배운 것
+- typeof function === true 이런 방식으로 구현을 할 수 있는 것 같다.
+- 리액트에서,,, 부모 컴포넌트의 스테이트가 바뀌면 자식 컴포넌트도 새롭게 렌더링된다.
+- 따라서 스테이트는 부모 컴포넌트가 아니라 본인이 갖고 있는 것이 렌더링 이슈가 적다.
+- 하지만 props는 단방향 통신(?)이므로 부모 컴포넌트가 스테이트를 가지고 있어야할 상황이 많이 나온다.
+- 그래서 렌더링 이슈를 해결하는 의미에서 redux 등 상태 관리 툴을 사용할 수 있어야 한다. 
