--- a/23년1월TIL.MD
+++ b/23년1월TIL.MD
@@ -122,7 +122,6 @@ Serve Files
 - 더불어, 연산자(Operator) 공부를 다시 해야할 것 같다.
 
 ## 1월 26일 TIL
-- 아 어제 술을 너무 많이 마셨다. 앞으로는 적당히 마셔야지..
 - 지성님이 추천해주신 리액트 스터디 첫 날이었다.
 ### 오늘 배운 것
 - typeof function === true 이런 방식으로 구현을 할 수 있는 것 같다.
@@ -130,3 +129,10 @@ Serve Files
 - 따라서 스테이트는 부모 컴포넌트가 아니라 본인이 갖고 있는 것이 렌더링 이슈가 적다.
 - 하지만 props는 단방향 통신(?)이므로 부모 컴포넌트가 스테이트를 가지고 있어야할 상황이 많이 나온다.
 - 그래서 렌더링 이슈를 해결하는 의미에서 redux 등 상태 관리 툴을 사용할 수 있어야 한다. 
+
+## 1월 31일 TIL
+- MVC 패턴을 나누는 방법을 다시 공부했다.
+- Model에서 데이터를 다룰 때 class를 이용해서 인스턴스를 만들어 사용하는 방식으로 했는데 처음 하는 방법이라 로직이 이해가 잘 가지 않았다.
+- 일단 유데미 강의를 끝까지 들어보면 얼추 감이 잡힐 것 같으며, 잡은 감으로 서버를 만들면 될 것 같다.
+- 느리지만 확실하게 조금씩 하는거다.
+- 내일은 백준 실버 갈 수 있을 것 같다.
