--- a/23년2월TIL.md
+++ b/23년2월TIL.md
@@ -1,5 +1,5 @@
 ## 2월 1일 TIL
-Dynamic Routing
+**Dynamic Routing**
 - You can pass dynamic path segments by adding a ":" to the Express router path
 - The name you add after ":" is the name by which you can extract the data on req.params
 - Optional (query) parameters can also be passed (?param=value&b=2) and extracted (req.query.myParam)
