23년 2월 2일 TIL 업데이트
23년 2월 2일 TIL 업데이트

--- a/23년2월TIL.md
+++ b/23년2월TIL.md
@@ -3,3 +3,10 @@
 - You can pass dynamic path segments by adding a ":" to the Express router path
 - The name you add after ":" is the name by which you can extract the data on req.params
 - Optional (query) parameters can also be passed (?param=value&b=2) and extracted (req.query.myParam)
+
+## 2월 2일 TIL
+- mySQL을 이용해서 데이터를 저장해보았다.
+- json 파일 하나로 데이터를 운용하는 것 보다 훨씬 편하고 빠르고 쉬웠다.
+- 데이터베이스는 사실 데이터를 저장하는 것이 제일 중요하고 그 기능을 벗어나지 않는다는 것을 새삼 알게 되었다.
+- 관련된 내용은 블로그에 포스팅하며 공부했었다.
+- 내일은 시퀄라이즈에 대해 약간 공부할 예정이다.
