--- a/23년2월TIL.md
+++ b/23년2월TIL.md
@@ -10,3 +10,22 @@
 - 데이터베이스는 사실 데이터를 저장하는 것이 제일 중요하고 그 기능을 벗어나지 않는다는 것을 새삼 알게 되었다.
 - 관련된 내용은 블로그에 포스팅하며 공부했었다.
 - 내일은 시퀄라이즈에 대해 약간 공부할 예정이다.
+
+## 2월 3일 TIL은 아님
+```js
+function Component() {
+  var 현재상태 = 'info';
+  return (
+    <div>
+      {
+        { 
+           info : <p>상품정보</p>,
+           shipping : <p>배송관련</p>,
+           refund : <p>환불약관</p>
+        }[현재상태]
+      }
+
+    </div>
+  )
+} 
+```
