--- a/23년2월TIL.md
+++ b/23년2월TIL.md
@@ -11,7 +11,7 @@
 - 관련된 내용은 블로그에 포스팅하며 공부했었다.
 - 내일은 시퀄라이즈에 대해 약간 공부할 예정이다.
 
-## 2월 3일 TIL은 아님
+## 2월 3일 TIL
 ```js
 function Component() {
   var 현재상태 = 'info';
@@ -29,3 +29,10 @@ function Component() {
   )
 } 
 ```
+
+## 2월 4~6일 TIL
+- 클린코드 및 패턴에 대한 공부의 필요성을 느끼고 있다.
+- vue를 어느정도 알고 회사에 가야함을 느꼈다. 공식문서와 강의를 보면서 조금씩 익혀나가고 있다.
+- 일단 cdn을 이용해서 vue를 약간씩 익혀보고 있다.
+- vue는 vue 인스턴스를 생성한 뒤 그 인스턴스를 html에 이식하는 방식으로 돌아가는 것 같다.
+- 공부가 많이 필요하다.
