2월 7일~8일 TIL 업데이트
2월 7일~8일 TIL 업데이트

--- a/23년2월TIL.md
+++ b/23년2월TIL.md
@@ -36,3 +36,10 @@ function Component() {
 - 일단 cdn을 이용해서 vue를 약간씩 익혀보고 있다.
 - vue는 vue 인스턴스를 생성한 뒤 그 인스턴스를 html에 이식하는 방식으로 돌아가는 것 같다.
 - 공부가 많이 필요하다.
+
+## 2월 7~8일 TIL
+- v-bind:value="머시기저시기"
+- v-bind:src="이미지주소"
+- {{ 바인딩할 값 또는 JS 표현식 }}
+- v-on:click="이벤트핸들러"
+- v-on:input="이벤트핸들러($event, '상수값')"
