23년 2월 8일 TIL 최종업데이트
23년 2월 8일 TIL 최종업데이트

--- a/23년2월TIL.md
+++ b/23년2월TIL.md
@@ -38,10 +38,40 @@ function Component() {
 - 공부가 많이 필요하다.
 
 ## 2월 7~8일 TIL
+```
+v-bind:value="바인딩할값"
+v-bind:src="이미지주소"
+{{ 바인딩할 값 또는 JS 표현식 }}
+v-on:click="이벤트핸들러"
+v-on:input="이벤트핸들러($event, '상수값')"
+```
+- v-on은 DOM의 이벤트를 바인딩할 수 있는 v-directive 이다.
+- v-on:click="이벤트핸들러" 와 같이 핸들러를 바인딩할 경우, 핸들러에 자동적으로 이벤트 객체가 전달된다.
+- v-on:click="이벤트핸들러(100)" 와 같이 핸들러를 바인딩 할 경우, 이벤트 객체가 입력된 파라미터(여기서는 100)로 덮어씌워진다.
+- 이벤트 객체를 보존해야 할 경우, 첫 파라미터명을 $event로 정해준다.
+
+### 재귀적 순회 공부 (추가적 코드 해석 필요)
 ```js
-- v-bind:value="머시기저시기"
-- v-bind:src="이미지주소"
-- {{ 바인딩할 값 또는 JS 표현식 }}
-- v-on:click="이벤트핸들러"
-- v-on:input="이벤트핸들러($event, '상수값')"
+let company = { // 동일한 객체(간결성을 위해 약간 압축함)
+  sales: [{name: 'John', salary: 1000}, {name: 'Alice', salary: 1600 }],
+  development: {
+    sites: [{name: 'Peter', salary: 2000}, {name: 'Alex', salary: 1800 }],
+    internals: [{name: 'Jack', salary: 1300}]
+  }
+};
+
+// 급여 합계를 구해주는 함수
+function sumSalaries(department) {
+  if (Array.isArray(department)) { // 첫 번째 경우
+    return department.reduce((prev, current) => prev + current.salary, 0); // 배열의 요소를 합함
+  } else { // 두 번째 경우
+    let sum = 0;
+    for (let subdep of Object.values(department)) {
+      sum += sumSalaries(subdep); // 재귀 호출로 각 하위 부서 임직원의 급여 총합을 구함
+    }
+    return sum;
+  }
+}
+
+alert(sumSalaries(company)); // 7700
 ```
