2월 9일 TIL 업데이트
2월 9일 TIL 업데이트

--- a/23년2월TIL.md
+++ b/23년2월TIL.md
@@ -75,3 +75,12 @@ function sumSalaries(department) {
 
 alert(sumSalaries(company)); // 7700
 ```
+
+## 2월 9일 TIL
+```
+v-once : 한번만 렌더링하는 v-directive
+v-model : vue의 양방향 바인딩의 축약기능. data property를 할당하면 사용가능
+methods를 이벤트 등에 바인딩하지않고 html 텍스트 요소에 바인딩하면 렌더링이 일어날때마다 메서드가 실행됨(최적화 ↓)
+computed : 내부 로직의 의존성을 감지하며,  데이터가 변경될 경우 로직에 관련된 부분을 리렌더링함.
+watch : 특정 data property의 의존성을 감지하며, 데이터가 변경될 경우 로직에 관련된 부분을 리렌더링함.
+```
