--- a/TIL/redux/5. immer.md
+++ b/TIL/redux/5. immer.md
@@ -8,6 +8,8 @@
 - 아래 코드는 state를 변경할 때, 불변성을 유지하기 위해 스프레드 문법을 사용하고 있다.
 - 여기에 immer 라이브러리를 도입하면 직관적으로 코드하면서도 불변성을 유지할 수 있다.
 ```js
+const initialState = []
+
 const postReducer = (prevState = initialState, action) => {
   switch (action.type) {
     case "ADD_POST":
