redux TIL 최종 정리

--- a/TIL/redux/2. combineReducers.md
+++ b/TIL/redux/2. combineReducers.md
@@ -1,8 +1,10 @@
 # combineReducers
-- store에 위치한 **각각의 데이터 조각**들에 **reducer 조각**들을 연결하기 위한 편의 기능
-- store - (연결) -> combineReducer - (연결) -> { reducer 조각들 } 과 같이 구성된다.
+
+- store에 위치한 **각각의 데이터 조각**들에 **reducer 조각**들을 연결하기 위한 편의 기능이다.
+- 여러개의 데이터로 구성된 state들에 개별적으로 reducer를 제공하기 위한 기능이라고 생각하면 편하다.
 
 ## main/index.js (store가 위치하는 redux의 메인 파일)
+
 ```js
 // main/index.js
 const reducer = require("./reducers");
@@ -21,15 +23,17 @@ const initialState = {
   followers: [],
 };
 
-const store = createStore(reducer, initialState)
+const store = createStore(reducer, initialState);
 ```
-- store에 reducer를 연결하고, initialState를 연결한다. 
-- store 연결에서는 기존의 reducer를 사용하는 프로젝트와 크게 다를 것이 없다.
+
+- createStore를 통해 reducer와 initialState를 연결한다.
+- 여기서는 기존의 reducer를 사용하는 프로젝트와 다를 것이 없다.
 
 ## main/reducers/index.js (combineReducer가 위치하는 reducer의 메인 파일)
+
 ```js
 // main/reducers/index.js
-const { combineReducer } = require("redux")
+const { combineReducer } = require("redux");
 
 const postReducer = (prevState = [], action) => {
   switch (action.type) {
@@ -62,13 +66,16 @@ module.exports = combineReducers({
   posts: postReducer,
 });
 ```
-- combineReducer 함수를 이용해서 reducer 함수를 결합한 뒤 exports 한다.
-- combineReducer 함수는 객체를 인수로 받으며, user, posts 등 기존 **initialState**에 미리 명시된 데이터들에 각각 하나씩의 reducer 조각을 붙여준다.
-- reducer 조각들은 연결된 하나의 데이터만 담당하며, 구조는 이전의 reducer와 같으나 **초기값(prevState)** 을 반드시 명시해주어야 한다.
+
+- combineReducers 메서드를 이용해서 reducer 조각들을 결합한 뒤 default로 exports 한다.
+- store가 위치한 index는 이 함수를 reducer로 받아 initialState와 연결한 것이다.
+- combineReducers 메서드는 객체를 인수로 받으며, 객체에는 user, posts 등 기존 initialState의 데이터들을 키값으로 하여 각각 하나씩 reducer 조각을 붙인다.
+- reducer 조각들은 키로 연결된 하나의 데이터의 변경만을 담당하며, reducer 조각의 prevState에는 반드시 초기값을 명시해주어야 한다.
 
 ---
 
-위의 코드에서는 최종적으로 store의 2개의 데이터에만 reducer가 붙게 되었으며,
+위의 코드에서는 최종적으로 2개의 state 데이터가 reducer와 연결되었으며
+
 ```js
 const initialState = {
   user: {
@@ -83,6 +90,7 @@ const initialState = {
   followers: [],
 };
 ```
+
 연결되지않은 나머지 store의 initialState(comments, favorites, history, likes, followers) 는 무시된다.
 
 ![image](https://github.com/2duckchun/2duckchun/assets/92588154/42ee1dae-d4ba-458e-b673-4b5a576a8313)
