--- a/TIL/redux/4. redux-thunk.md
+++ b/TIL/redux/4. redux-thunk.md
@@ -1,30 +1,35 @@
 # redux-thunk
-- thunk의 **프로그래밍적 의미**는 어떤 코드의 동작이 실행되기 전에 추가적인 연산을 지원할 필요가 있을 때 사용되는 '것' 이라고 한다.
-- redux-thunk도 이와 비슷한 역할을 하며, 특히 비동기 코드와 깊은 관계가 있다.
-- 기존의 redux 싸이클이 `action`을 `dispatch`를 통해 바로 `reducer`로 전달해주는 동기적인 성질을 띄었었다면
-- redux-thunk는 **`action`을 함수로 만들어** 함수 내부의 실행 컨텍스트에서 비동기적 작업을 할 수 있게 해준다.
+
+- thunk의 **프로그래밍적 의미**는 어떤 코드의 동작이 실행되기 전에 추가적인 연산을 지원할 필요가 있을 때 사용되는 '것' 이다. (정확한 명칭은 아니지만 뉘앙스는 이렇다.)
+- redux-thunk도 이와 비슷한 역할을 하며, redux-thunk는 특히 비동기 코드와 깊은 연관이 있다.
+
+기존의 redux 싸이클이 action을 dispatch를 통해 바로 reducer로 전달해주는 동기적인 성질을 띄었다면
+redux-thunk는 action을 함수 인자로 받아, 함수 내부의 실행 컨텍스트에서 비동기적 작업을 할 수 있게 한다.
 
 ## 코드
+
 ```js
 const myFirstThunkMiddleWare = (store) => (next) => (action) => {
   if (typeof action === "function") {
-    return action(store.dispatch, store.getState)
+    return action(store.dispatch, store.getState);
   }
-  return next(action)
-}
+  return next(action);
+};
 ```
-- `thunk` 기능을 따로 `import`받아서 사용해도 되지만, **위의 코드가 redux-thunk의 실제 코드와 거의 유사하므로** 직접 코드해서 사용할 수도 있다.
-- **action을 함수로 사용하는 것을 thunk 기능을 사용하는 것**이라고 미리 약속을 했다는 가정하에 코드를 작성해야 한다.
-- action에 전달하는 인수는 store.dispatch, store.getState 고정이다. (하나의 약속이다.)
-- 사실 `redux-thunk`의 역할은 action이 함수일 때, action의 컨텍스트 내부에 store의 dispatch와 getState를 전달해주는 역할 뿐이다.
+
+- thunk 기능을 따로 npm 다운로드 받아 사용해도 되지만, 위의 코드가 redux-thunk의 실제 코드와 거의 유사하므로, 위와 같이 직접 코드해서 사용할 수도 있다.
+- action을 함수로 사용하는 것을 thunk 기능을 사용하는 것이라고 미리 약속했다는 가정하에 코드를 작성해야 한다.
+- action에 전달하는 인자는 store.dispatch, store.getState 고정이다.
+- 사실 redux-thunk의 역할은 action이 함수일 때, action 함수 컨텍스트 내부에 store의 dispatch와 getState를 전달해주는 것에 있다.
 
 ## 그렇다면 thunk보다는 action이 중요하다.
+
 - redux-thunk의 역할은 action이 함수일 때, dispatch 등의 역할을 action에 위임하는 것 밖에 없다.
-- 그러므로 action 내부의 코드가 훨씬 중요하다.
-- thunk를 사용하고자 할 때, action 크리에이터 함수는 함수를 리턴해야 한다.
-- 내부에서 비동기 작업 등을 실컷 하다가 thunk로 부터 넘겨받은 dispatch 함수에 작업물을 넘겨주면 된다.
+- 그러므로 action 내부의 코드가 훨씬 중요한데, thunk를 사용하고자 할 때 action 자체가 함수여야 한다.
+- 이를 이용하여 thunk에서 action에 dispatch 메서드를 넘겨줄 수 있게되고, action 함수의 컨텍스트 내에서 비동기 작업이 가능해지는 것이다.
 
 ## thunk action 예시
+
 ```js
 const logIn = (data) => {
   // async action creator (비동기 액션 : 함수 리턴)
