TIL : 컴포넌트 기초 문서 기록 수정

--- a/TIL/react/공식문서 톺아보기/1. Describing the UI/1. 컴포넌트 기초.md
+++ b/TIL/react/공식문서 톺아보기/1. Describing the UI/1. 컴포넌트 기초.md
@@ -1,19 +1,64 @@
 # 컴포넌트 기초
 
-## Pitfall 1
+- 컴포넌트는 리액트의 코어 컨셉(Core Concept)이다.
+- 리액트의 모든 UI는 컴포넌트의 집합체라고 할 수 있으며, 컴포넌트를 잘 설계하는 것이 리액트 여행을 잘 하는 방법이다.
 
-- 리액트 컴포넌트는 일반적인 자바스크립트 함수이지만, 컴포넌트명의 첫번째 글자는 반드시 대문자로 해야한다. 그렇게 안하면 동작하지 않는다.
-- 컴포넌트의 리턴에 괄호가 없다면 return이 속한 다음줄들은 무시된다.
+## 리액트에서 중요한 것 = 컴포넌트 (UI를 빌딩하는 블록)
+
+- HTML, CSS, Javascript를 잘 조합하면 좋은 웹 문서를 만들 수 있다.
+- 리액트는 HTML, CSS, Javascript를 조합하여 컴포넌트를 만들 수 있게 해준다.
+- 본질적으로 HTML, CSS, Javascript를 이용해서 컴포넌트를 만들고 이를 조합하여 완성된 UI를 만들고, 나아가 하나의 웹 문서를 만들 수 있게 되므로,
+- 리액트에서 가장 중요한 것은 컴포넌트이다.
 
 ```js
-return;
-<div>
-  <img src="https://i.imgur.com/MK3eW3As.jpg" alt="Katherine Johnson" />
-</div>;
-// 이 경우에는 어떤 것도 리턴되지 않는다.
+// 컴포넌트의 집합 = 웹
+<PageLayout>
+  <NavigationHeader>
+    <SearchBar />
+    <Link to="/docs">Docs</Link>
+  </NavigationHeader>
+  <Sidebar />
+  <PageContent>
+    <TableOfContents />
+    <DocumentationText />
+  </PageContent>
+</PageLayout>
 ```
 
-## Pitfall 2
+- 컴포넌트는 개발자가 직접 하나하나 만들 수도 있고, 이미 만들어진 수천가지의 컴포넌트를 이용할 수도 있다.
+- 개발할 것은 개발하고, 사용할 것은 가져와 사용하면서 웹 개발 여행을 떠나보자!
+
+### 이미 만들어진 수천가지의 컴포넌트 오픈소스
+
+- Chakra UI : https://chakra-ui.com/
+- Material UI : https://mui.com/core/
+
+## 컴포넌트 정의하기
+
+- 요즘에는 컴포넌트를 함수형으로 제작한다.
+- 따라서 함수형 컴포넌트를 정의하는 방법을 알아볼 것이다.
+
+### Step1. 컴포넌트 export (모듈화) 하기
+
+- export prefix를 이용하여 컴포넌트를 모듈화(외부로 노출)해야한다. (export는 표준 자바스크립트 문법이다.)
+
+### Step2. 함수 이름은 대문자로 정의하기
+
+- 리액트 컴포넌트는 일반적인 자바스크립트 함수이지만, 컴포넌트명의 첫번째 글자는 반드시 대문자로 해야한다. 그렇게 하지 않으면 동작하지 않는다.
+
+### Step3. 마크업 하기
+
+- 컴포넌트가 return한 JSX가 곧 마크업이 된다.
+
+### 컴포넌트 정의 예시
+
+```js
+export default function Profile() {
+  return <img src="https://i.imgur.com/MK3eW3Am.jpg" alt="Katherine Johnson" />;
+}
+```
+
+## 함정
 
 - 컴포넌트 내부에 다른 컴포넌트를 렌더링할 수는 있으나, 컴포넌트의 선언은 반드시 최상단에서 해야한다.
 - 아래와 같이 컴포넌트를 이중으로 선언하면 오만가지 버그가 생긴다.
