--- a/TIL/react/공식문서 톺아보기/1. Describing the UI/6. 조건부 렌더링.md
+++ b/TIL/react/공식문서 톺아보기/1. Describing the UI/6. 조건부 렌더링.md
@@ -19,7 +19,7 @@ function Item({ name, isPacked }) {
 }
 ```
 
-- 컴포넌트는 JSX를 리턴만하면 된다는 정신하에 써볼 수 있는 방법이다.
+- 위 방법은 컴포넌트는 JSX를 리턴만하면 된다는 정신하에 써볼 수 있는 방법이다.
 - isPacked가 true일 경우와 false일 경우의 리턴되는 JSX가 다르다.
 - `<li className="item">{name}</li>` 코드가 중복되는 것을 볼 수 있다.
 
@@ -32,15 +32,15 @@ if (isPacked) {
 return <li className="item">{name}</li>;
 ```
 
-- 컴포넌트는 반드시 어떤 것이라도 리턴해야 한다. 그런 의미로 아무것도 렌더링하고 싶지 않을댸는 null을 리턴한다.
-- 하지만 null을 리턴하는 것은 다소 생소한 방법이라고 할 수 있다. (동료 개발자에게 혼란을 줄 수 있다.)
+- 컴포넌트는 반드시 어떤 것이라도 리턴해야 한다. 그런 의미로 아무것도 렌더링하고 싶지 않을때는 null을 리턴한다.
+- 하지만 null을 리턴하는 것은 컨벤션에 따라 동료 개발자에게 혼란을 줄 수 있다.
 
 ---
 
 ## 조건에 따라 JSX의 구성요소를 포함, 제거하기
 
 - 자바스크립트 표현식을 이용하여 조건에 따라 JSX의 구성요소를 섬세하게 다루는 방법이다.
-- `삼항 연산자`, `&& 연산자`, `조건에 따른 JSX의 변수 재할당`하는 방법이 있다.
+- `삼항 연산자`, `&& 연산자`, `조건에 따른 JSX의 변수 재할당` 방법이 있다.
 
 ### 삼항 연산자
 
@@ -66,21 +66,25 @@ function Item({ name, isPacked }) {
 ```
 
 - && 연산자를 사용하여 isPacked가 true일때 `✔`를 함께 렌더링해줄 수 있다.
-- isPacked가 false일 경우, && 연산자로 묶인 자바스크립트 표현식 자체가 false가 되어 렌더링되지 않게된다.
+- isPacked가 false일 때는 && 연산자로 묶인 자바스크립트 표현식 자체가 false가 되어 렌더링되지 않는다.
 - && 연산자 mdn 링크 : https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Logical_AND_assignment
 
-```
-**주의사항**
+```js
+// **주의사항**
 
-&& 연산자의 왼쪽 부분에는 숫자를 넣지 않는 것이 좋음.
-자동으로 boolean으로 변환이 되긴 하지만, 0을 넣었을때에는 왜인지 0을 false로 변환하지 않음.
+// && 연산자의 왼쪽 부분에는 숫자를 넣지 않는 것이 좋다.
+// && 연산자에서는 0이 falsy한 값이라도 오른쪽 부분으로 넘어가지 않고, 0을 바로 표현해버리기 때문이다.
 
-메세지 카운트가 1개 이상일 때 New Message 텍스트를 렌더링하고 싶을 경우 아래와 같이 작성할 수 있으나
-{ messageCount && <p>New Message</p> }
-messageCount가 0일 경우 그냥 0이 렌더링 되는 현상이 발생함.
+// 메세지 카운트가 1개 이상일 때 New Message 텍스트를 렌더링하고 싶을 경우 아래와 같이 작성할 수 있으나
+{
+  messageCount && <p>New Message</p>;
+}
+// messageCount가 0일 경우 그냥 0이 렌더링 되는 현상이 발생한다.
 
-따라서 숫자형을 넣을때에는 아래와 같이 boolean으로 변환해주는 것이 필요함.
-{ messageCount > 0 && <p>New Message</p> }
+//따라서 숫자형을 넣을때에는 아래와 같이 boolean으로 변환해주는 것이 필요하다.
+{
+  messageCount > 0 && <p>New Message</p>;
+}
 ```
 
 ### 조건에 따른 JSX의 변수 재할당
