이벤트 핸들러 문서 수정

--- a/TIL/react/공식문서 톺아보기/2. Adding Interactivity/1. 이벤트 핸들러.md
+++ b/TIL/react/공식문서 톺아보기/2. Adding Interactivity/1. 이벤트 핸들러.md
@@ -2,7 +2,7 @@
 
 - JSX에 이벤트를 추가함으로써 click, hover, focus 등 다양한 이벤트를 리액트에서 사용할 수 있다.
 
-## JSX에 이벤트 핸들러 추가하기
+## JSX에 이벤트 핸들러 전달하기
 
 ```js
 export default function Button() {
@@ -33,37 +33,57 @@ export default function Button() {
 ```
 
 - `onClick`은 이벤트 동작 조건이고, `handleClick` 함수가 이벤트 핸들러이다.
-- 이벤트 핸들러를 `<button>` 등의 JSX 구문에 props로 넘겨질 수 있다.
+- 이벤트 핸들러는 JSX의 이벤트 동작조건 (`onClick` 등등...)에 props로 전달해서 동작시킨다.
 - 이벤트 핸들러는 컨벤션에 의해 handle이 앞에 붙고, 이벤트명이 뒤에 붙는다. (ex: `handle` + `Click`)
-- 이벤트 동작 조건은 `react-dom`에 의해 모두 정해져있는 것이다. (`addEventlistener`와 관련이 깊다.)
+- 이벤트 동작 조건은 `react-dom`에 의해 모두 정해져있다. (`addEventlistener`와 관련이 깊다.)
 - 이벤트 동작 조건 및 common 컴포넌트 정리 : https://react.dev/reference/react-dom/components/common#mouseevent-handler
 
 
-## 이벤트 핸들러에 props 전달하기
+## 이벤트 핸들러 전달시 주의사항
 
 ```js
-function AlertButton({ message, children }) {
+something.addEventListner(() => {
+  // 이벤트
+})
+```
+- 기본적으로 `addEventListner`는 콜백을 받는 형식으로 동작한다.
+- 그러므로, onClick 등의 이벤트 동작조건에 핸들러를 전달할때도 단순히 함수를 넘겨주기만 해야한다.
+
+```js
+export default function Button() {
+  function handleClick() {
+    alert("You clicked me!");
+  }
+
   return (
-    <button onClick={() => alert(message)}>
-      {children}
+    <button onClick={handleClick()}>
+      Click me
     </button>
   );
 }
-
-export default function Toolbar() {
-  return (
-    <div>
-      <AlertButton message="Playing!">
-        Play Movie
-      </AlertButton>
-      <AlertButton message="Uploading!">
-        Upload Image
-      </AlertButton>
-    </div>
-  );
-}
 ```
-- 이벤트 핸들러도 일단은 함수이므로, props를 인자로 사용할 수 있다.
+- 위 코드와 같이 이벤트 핸들러를 onClick에 실행해버리면 런타임에 alert이 동작한다.
+- 따라서 이벤트 핸들러를 JSX에 넘겨줄때는 아래와 같은 방법을 따라야 한다.
+```js
+  return (
+    <button onClick={handleClick}>
+      Click me
+    </button>
+  );
+```
+
+또는
+
+```js
+  return (
+    <button onClick={() => handleClick()}>
+      Click me
+    </button>
+  );
+```
+
+
+
 
 ## Naming event handler props (이벤트핸들러에 이름붙여서 전달하기)
 ```js
@@ -125,7 +145,7 @@ function Button({ onFocus, children }) {
 ```
 ---
 
-## 이벤트 전파(Event Propagation)
+## 이벤트 전파(Propagation) 및 기본동작
 - 이벤트 전파는 자바스크립트 이벤트의 기본 동작 원리이다.
 - 리액트의 이벤트 핸들러도 자식 컴포넌트들이 발생시키는 모든 하위 이벤트도 포착할 수 있다.
 - **리액트에서는 부착한 JSX에만 동작하는 `onScroll`을 제외한 모든 이벤트가 전파된다**.
@@ -196,7 +216,8 @@ export default function Signup() {
   );
 }
 ```
-- form의 onSubmit은 이벤트의 기본 동작 상 페이지를 새로 로드하는데,
+- 각 이벤트에는 고유한 기본 동작들이 있다.
+- 예를들어 `form`의 `onSubmit`은 이벤트의 기본 동작으로 페이지를 새로 로드하는데,
 - `e.preventDefault()`를 실행하면 기본 동작을 막을 수 있다.
 
 ## 이벤트 핸들러는 Side Effect를 일으키기 좋은 곳이다.
@@ -205,3 +226,12 @@ export default function Signup() {
 - 이벤트 핸들러가 동작해서 state가 변경되면 변경된 state로 화면들이 재렌더링 된다.
 - 즉, 컴포넌트의 순수성을 해하지 않는다.
 - 따라서 이벤트 핸들러는 State를 변경하는 등의 역할을 부여할 수 있는 최적의 장소다.
+
+---
+
+## Recap
+- [ ] 이벤트 핸들러를 JSX element의 이벤트 동작 조건에넘겨줄 수 있다.
+- [ ] 이벤트 핸들러는 이벤트 실행조건에 전달만 해야한다. 함수를 호출해서 넘겨주면 안된다.
+- [ ] 이벤트 핸들러를 props로 넘겨주는 등, 재사용성을 고려할 수 있다.
+- [ ] 이벤트 전파나 이벤트 기본동작을 제어할 수 있다.
+- [ ] 이벤트 핸들러가 왜 Side Effect를 일으키기 좋은 공간인지 대략적으로 이해할 수 있다.
