공식문서 정리 Recap 수정

--- a/TIL/react/공식문서 톺아보기/1. Describing the UI/1. 컴포넌트 기초.md
+++ b/TIL/react/공식문서 톺아보기/1. Describing the UI/1. 컴포넌트 기초.md
@@ -33,34 +33,47 @@
 - Chakra UI : https://chakra-ui.com/
 - Material UI : https://mui.com/core/
 
+---
+
 ## 컴포넌트 정의하기
 
-- 요즘에는 컴포넌트를 함수형으로 제작한다.
-- 따라서 함수형 컴포넌트를 정의하는 방법을 알아볼 것이다.
+- 함수형 컴포넌트를 정의하는 방법을 알아볼 것이다.
 
 ### Step1. 컴포넌트 export (모듈화) 하기
 
 - export prefix를 이용하여 컴포넌트를 모듈화(외부로 노출)해야한다. (export는 표준 자바스크립트 문법이다.)
-
+```js
+export default function...
+```
 ### Step2. 함수 이름은 대문자로 정의하기
 
 - 리액트 컴포넌트는 일반적인 자바스크립트 함수이지만, 컴포넌트명의 첫번째 글자는 반드시 대문자로 해야한다. 그렇게 하지 않으면 동작하지 않는다.
+```js
+export default function Profile() {
+  ...
+} 
+```
+
 
 ### Step3. 마크업 하기
 
 - 컴포넌트가 return한 JSX가 곧 마크업이 된다.
 
-### 컴포넌트 정의 예시
 
 ```js
 export default function Profile() {
-  return <img src="https://i.imgur.com/MK3eW3Am.jpg" alt="Katherine Johnson" />;
+  return (
+    <img 
+      src="https://i.imgur.com/MK3eW3Am.jpg" 
+      alt="Katherine Johnson" 
+    />;
+    )
 }
 ```
 
 ## 함정
 
-- 컴포넌트 내부에 다른 컴포넌트를 렌더링할 수는 있으나, 컴포넌트의 선언은 반드시 최상단에서 해야한다.
+- 컴포넌트의 선언은 반드시 최상단에서 해야한다.
 - 아래와 같이 컴포넌트를 이중으로 선언하면 오만가지 버그가 생긴다.
 
 ```js
@@ -73,7 +86,7 @@ export default function Gallery() {
 }
 ```
 
-- 아래 코드처럼 꼭 최상단에 선언하라.
+- 컴포넌트는 아래 코드처럼 꼭 최상단에 분리해서 선언하자.
 
 ```js
 export default function Gallery() {
@@ -94,10 +107,12 @@ function Profile() {
 - 재사용 가능한 버튼부터 커다란 사이드바, 헤더, 전체 페이지까지 모든 것이 컴포넌트이며,
 - 컴포넌트를 한번만 사용하더라도 컴포넌트 UI로 만드는 것은 많은 이점을 가져다줄 수 있다.
 
+---
+
 ## Recap
 
-- 리액트로 재사용 가능한 UI 엘리먼트를 만들 수 있다.
-- 리액트 앱에서, 모든 UI 조각들은 컴포넌트로 구성되어 있다.
-- 리액트 컴포넌트는 아래 두가지 특징을 제외하고는 일반적인 자바스크립트 함수라고 볼 수 있다.
+- [ ] 리액트로 재사용 가능한 UI 엘리먼트를 만들 수 있다.
+- [ ] 리액트 앱에서, 모든 UI 조각들은 컴포넌트로 구성되어 있다.
+- [ ] 리액트 컴포넌트는 두가지 특징을 제외하고는 일반적인 자바스크립트 함수라고 볼 수 있다.
   1. 첫 문자는 반드시 대문자로 쓰여야 하는 특징.
   2. JSX를 리턴한다는 특징.
