--- a/TIL/react/공식문서 톺아보기/1. Describing the UI/3. JSX로 마크업하기.md
+++ b/TIL/react/공식문서 톺아보기/1. Describing the UI/3. JSX로 마크업하기.md
@@ -67,9 +67,11 @@
 - JSX의 마크업을 잘못했을 때, 에러메세지를 확인하면 어디가 잘못되었는지 잘 알려준다.
   ![image](https://github.com/2duckchun/2duckchun/assets/92588154/5d92f555-aac3-4c17-a4e2-664ad8b5db72)
 
+---
+
 ## Recap
 
-- JSX는 웹의 복잡도가 증가함에 따라 편하게 개발을 하기 위해 등장하게 되었다.
-- 로직과 마크업을 함께 구현할 수 있게 해준다.
-- JSX는 HTML과 유사하지만 몇가지 차이점은 존재한다.
-- 오류메세지가 친절하다. 문제가 생긴 것 같다면 오류메세지를 확인하고 JSX를 수정해보자.
+- [ ] JSX는 웹의 복잡도가 증가함에 따라 편하게 개발을 하기 위해 등장하게 되었다.
+- [ ] 로직과 마크업을 함께 구현할 수 있게 해준다.
+- [ ] JSX는 HTML과 유사하지만 몇가지 차이점은 존재한다.
+- [ ] 오류메세지가 친절하다. 문제가 생긴 것 같다면 오류메세지를 확인하고 JSX를 수정해보자.
