--- a/TIL/react/공식문서 톺아보기/1. Describing the UI/4. JSX와 {중괄호}.md
+++ b/TIL/react/공식문서 톺아보기/1. Describing the UI/4. JSX와 {중괄호}.md
@@ -6,7 +6,7 @@ JSX의 마크업 내부에는 문자열과 JS 표현형을 둘 다 사용할 수
 - JSX 마크업의 핵심은 JS 표현형을 JSX의 마크업 내부에 사용할 수 있다는 것이다.
 - JS 표현형을 마크업에 추가함으로써 동적인 화면을 구성할 수 있게 된다.
 
-## JSX에 문자열 넘기기("따옴표 활용")
+## JSX에 문자열 넘기기 `"따옴표 활용"` 
 
 - JSX 어트리뷰트에 문자열을 넘기고 싶다면 쌍따옴표나 홑따옴표를 사용하면 된다.
 
@@ -24,7 +24,7 @@ export default function Avatar() {
 
 - 따옴표로 감싸면 문자열을 전달할 수 있다.
 
-## JSX에 JS 표현형 넘기기 ( {중괄호활용} )
+## JSX에 JS 표현형 넘기기  `{중괄호활용}`
 
 - JSX에 동적으로 변하는 값을 전달해야 할 경우, 중괄호를 이용해 JS 표현형을 넘길 수 있다.
 
@@ -75,7 +75,7 @@ export default function Avatar() {
 <{tag}>Hello </{tag}>
 ```
 
-- 만약 JS 표현형을 전달할 떄 src="{avatar}" 와 같은 형식으로 전달한다면, src에는 문자열 "{avatar}"가 전달된다.
+- 만약 JS 표현형을 전달할 때 `src="{avatar}"` 와 같은 형식으로 전달한다면, src에는 문자열 `"{avatar}"`가 전달된다.
 
 ## JSX에 객체(Object) 전달하는 방법 : 이중 중괄호 {{ }}
 
@@ -140,11 +140,13 @@ export default function TodoList() {
 }
 ```
 
+---
+
 ## Recap
 
 이제 JSX에 대한 대부분을 알게 되었다!
 
-- JSX 어트리뷰트 내 쌍따옴표로 묶인 데이터는 문자열로 변환된다.
-- 중괄호를 통해 자바스크립트 로직이나 변수를 JSX 마크업에 반영할 수 있다.
-- 자바스크립트 표현형은 JSX 태그의 content 또는 attribute에 삽입될 수 있다.
-- {{ }} 이중 중괄호는 스페셜한 문법이 아니다. 중괄호에 객체가 담긴 것 뿐이다.
+- [ ] JSX 어트리뷰트 내 쌍따옴표로 묶인 데이터는 문자열로 변환된다.
+- [ ] 중괄호를 통해 자바스크립트 로직이나 변수를 JSX 마크업에 반영할 수 있다.
+- [ ] 자바스크립트 표현형은 JSX 태그의 content 또는 attribute에 삽입될 수 있다.
+- [ ] {{ }} 이중 중괄호는 스페셜한 문법이 아니다. 중괄호에 객체가 담긴 것 뿐이다.
