--- a/TIL/react/공식문서 톺아보기/1. Describing the UI/5. 컴포넌트에 Props 전달하기.md
+++ b/TIL/react/공식문서 톺아보기/1. Describing the UI/5. 컴포넌트에 Props 전달하기.md
@@ -267,6 +267,8 @@ export default function Profile() {
 - props를 수정할 수 없는 대신, 부모 요소가 내려주는 props를 변경시킬수는 있다.
 - 이는 다음에 state 쪽에서 배울 내용이다.
 
+---
+
 ## Recap
 
 - 부모 컴포넌트에서 자식 컴포넌트로 props를 전달하는 것은 굉장히 쉽다. `<Avatar hello="hi" />`
@@ -276,7 +278,7 @@ export default function Profile() {
 function Avatar({ person, size })
 ```
 
-- props의 디폴트 값을 `size = 100` 과 같이 지정할 수 있으며, props가 오지 않거나 undefined가 전송될 경우 디폴트 값으로 대체된다.
-- `<Avatar {...props} />` 를 통해 부모 컴포넌트의 모든 프롭스를 자식 컴포넌트에 한번에 전달할 수 있으나, 많이 쓸 문법은 아니다.
-- 중첩된 컴포넌트의 경우 `children` prop을 사용해야 한다.
-- Props는 읽기 전용이므로 props를 **직접** 바꿀수는 없다. 바꾸려면 set State를 이용해야 한다.
+- [ ] props의 디폴트 값을 `size = 100` 과 같이 지정할 수 있으며, props가 오지 않거나 undefined가 전송될 경우 디폴트 값으로 대체된다.
+- [ ] `<Avatar {...props} />` 를 통해 부모 컴포넌트의 모든 프롭스를 자식 컴포넌트에 한번에 전달할 수 있으나, 많이 쓸 문법은 아니다.
+- [ ] 중첩된 컴포넌트의 경우 `children` prop을 사용해야 한다.
+- [ ] Props는 읽기 전용이므로 props를 **직접** 바꿀수는 없다. 바꾸려면 set State를 이용해야 한다.
