--- a/TIL/react/공식문서 톺아보기/1. Describing the UI/2. 컴포넌트의 Import와 export.md
+++ b/TIL/react/공식문서 톺아보기/1. Describing the UI/2. 컴포넌트의 Import와 export.md
@@ -2,15 +2,15 @@
 
 ## root component file
 
-- 루트 컴포넌트는 Create React App으로 프로젝트를 만들었을 때 src/App.js 위치에 있는 그것이다.
-- 설정에 따라 루트 컴포넌트는 다른 파일로 대체될 수 있다.
+- Create React App로 프로젝트를 만들었을 때를 기준으로, 루트컴포넌트는 src/App.js 이다.
+- 하지만 설정에 따라 루트 컴포넌트는 다른 파일로 대체될 수 있다.
 - **만약 file-based routing 기능을 가진 리액트 프레임워크(ex. Next.js)를 쓴다면 루트 컴포넌트는 각각의 페이지가 될 것이다.**
 
 ## 컴포넌트 Export하고 Import 하기.
 
 1. 컴포넌트 만들기
-2. 재사용할 컴포넌트를 export 하기 (default 또는 named exports 사용)
-3. export된 컴포넌트를 사용할 상위 컴포넌트에 import 문을 통해 컴포넌트를 불러와서 사용하기.
+2. 재사용할 컴포넌트를 `export` 하기 (default 또는 named exports 사용)
+3. `export`된 컴포넌트를 사용할 상위 컴포넌트에 `import` 문을 통해 컴포넌트를 불러와서 사용하기.
 
 ```js
 // Gallery.js (Child or Reusable Component)
@@ -70,9 +70,11 @@ import Gallery from "./Gallery";
 - default exports는 import할때 이름을 바꿔줘도 상관없다.
 - named exports는 구조분해할당 등을 이용하여 꼭 이름을 명시해주어야만 한다.
 
+---
+
 ## Recap
 
-- 루트 컴포넌트는 최상단 컴포넌트이다.
-- import와 export는 default와 named 2가지 있다.
-- default는 export하려는 파일에서 하나의 데이터(또는 함수)에만 선언이 가능하다.
-- default export와 named export 두가지를 혼용해서 한 파일에 여러개의 컴포넌트를 export 할 수 있다.
+- [ ] 루트 컴포넌트는 최상단 컴포넌트이다.
+- [ ] import와 export는 default와 named 2가지 있다.
+- [ ] default는 export하려는 파일에서 하나의 데이터(또는 함수)에만 선언이 가능하다.
+- [ ] default export와 named export 두가지를 혼용해서 한 파일에서 여러개의 컴포넌트와 함수를 export 할 수 있다.
