TIL : State Queueing 문장 수정

--- a/TIL/react/공식문서 톺아보기/2. Adding Interactivity/5. State 업데이트의 Queueing.md
+++ b/TIL/react/공식문서 톺아보기/2. Adding Interactivity/5. State 업데이트의 Queueing.md
@@ -1,7 +1,8 @@
 # State 업데이트의 Queueing (대기열)
-- 컴포넌트의 state가 변경되면 렌더링 대기열에 추가된다.
-- 그러나 떄로는 렌더링이 이뤄지기 전에 state를 이용한 여러 작업을 해야할 수도 있다.
-- 이를 위해서 리액트 state 업데이트의 배치(batches) 시스템을 이해해야 한다.
+- state가 변경되면 리렌더링이 야기된다.
+- 하지만 때로는 리렌더링이 되기 전에 여러 작업을 해야할 때가 있다.
+- 리액트는 이를 위해 queue를 이용한 배치(batches) 시스템으로 state를 업데이트 한다.
+- 이벤트 리스너, state, 렌더링은 위 시스템과 밀접한 관계가 있는데, 이것을 이해하면 state를 좀 더 자유롭게 사용할 수 있을 것이다.
 
 ## 리액트 state 업데이트 배치 시스템
 - setState가 여러개 있다고 해서 setState를 만날때마다 렌더링 되는게 아니다.
@@ -37,9 +38,11 @@ export function App(props) {
  */
 
 ```
-- 위의 코드에서 버튼을 클릭하게 되면 `setNumber`(state 변경)이 각 `console.log`의 중간에 있음에도 불구하고, `console.log`가 모두 출력된다.
-- 즉, 하나의 이벤트 핸들러가 모두 끝날때까지 렌더링 과정은 잠시 멈추게 되며,
-- 이벤트 핸들러가 종료되면 state 변경에 따른 렌더링 과정이 진행된다.
+- 위의 코드를 클릭했을 때, setNumber가 4개라고 총 4번 렌더링되지는 않는다.
+- 오히려 맨 마지막의 `console.log`까지 출력되는 것을 볼 수 있다.
+- 이로써 하나의 이벤트 핸들러가 모두 끝날때까지 렌더링 과정은 잠시 멈추게 됨을 유추할 수 있다.
+- 대신 setState는 queue에 차례차례 대기하게 된다.
+- 이벤트 핸들러가 종료되면 queue에 의해 하나씩 setState가 실행되고, 마지막으로 렌더링 과정이 진행된다.
 - 즉, 한번에 처리함(batche)으로써 쓸데없는 렌더링 소요를 줄일 수 있게 된다.
 
 ## 리렌더링 전에 업데이트된 state 사용하는 방법
@@ -62,10 +65,10 @@ export default function Counter() {
   )
 }
 ```
-- 위 코드를 통해 생성된 버튼을 클릭하게 되면 +3씩 제대로 증가하게 된다.
+- 위 코드를 통해 생성된 버튼을 클릭하게 되면 number가 3번 1씩 증가한 뒤 렌더링된다.
 - setState 내부에 콜백함수로 `updater function`을 호출하고 있기 때문이다.
-- 리액트는 이벤트 핸들러가 끝나고 이 함수들이 실행될 수 있도록, setState 내부 코드들을 대기열(queue)에 저장한다.
-- 이벤트 핸들러가 종료된 후 리렌더링이 될 때, **큐에 먼저 들어간 `setState`의 `updater function`들이 미리 실행된 후**, 리렌더링이 시작된다.
+- 리액트는 이벤트 핸들러가 끝나고 setState가 실행될 수 있도록, setState를 대기열(queue)에 저장한다.
+- 이벤트 핸들러가 종료된 후 **큐에 먼저 들어간 `setState`의 `updater function`들이 미리 실행된 후**, 리렌더링이 시작된다.
 
 |대기 업데이트|n|리턴값|
 |------|---|---|
@@ -74,7 +77,7 @@ export default function Counter() {
 |n => n + 1|2|2 + 1 = 3|
 
 - `setNumber(n + 1)` 과 같이 고정된 스냅샷의 state로 값을 산출하는게 아니라
-- 이전 값(prevState)을 불러와 콜백함수로 큐에 넣고 차례차례 호출하는 것이므로
+- 이전 state값(prevState)을 불러와 `updater function`을 호출하는 것이므로
 - 의도한대로 값이 출력된다.
 ---
 
@@ -88,7 +91,7 @@ export default function Counter() {
   };
 //...
 ```
-스냅샷 : 0 (고정)
+스냅샷 : 0 (초기값)
 |대기 업데이트|n|리턴값|
 |------|---|---|
 |스냅샷 + 5|0|5|
