TIL : 7. 리듀서+컨텍스트 스케일업 문서 정리

--- a/TIL/react/공식문서 톺아보기/3. 상태(state) 관리/6. context 사용하기.md
+++ b/TIL/react/공식문서 톺아보기/3. 상태(state) 관리/6. context 사용하기.md
@@ -5,7 +5,7 @@
 ## props 전달의 문제점
 - props 전달은 UI 트리에 데이터 파이프라인을 명시적으로 구성하는 아주 좋은 방법이다.
 - 하지만 UI의 양 끝단으로 반복되는 props의 전달은 매우 불편하고, 복잡하다.
-- 조상 컴포넌트의 데이터가 필요한 컴포넌트가 조상의 한참 아래쪽에 위치할 수 있기 때문이다.
+- 조상 컴포넌트의 데이터를 필요로 하는 컴포넌트가 조상의 한참 아래쪽에 위치할 수 있기 때문이다.
 - 따라서 상태를 가진 부모 컴포넌트가 트리의 상단에 위치할수록 Props Drilling(프롭스 드릴링)이라는 현상이 발생한다.
 - **컨텍스트**를 활용하면 프롭스 드릴링 없이, 원하는 데이터를 컴포넌트에 텔레포트 시킬 수 있다.
 
