230926. 타입스크립트 클래스.md

--- a/TIL/230926. 타입스크립트 클래스.md
+++ b/TIL/230926. 타입스크립트 클래스.md
@@ -48,3 +48,53 @@ const Someone = new Designer('박', '디쟈이너', 'Designer')
 - private : 클래스 내에서만 접근 가능한 프로퍼티를 만드는 보안 레벨.
 - protected : 클래스를 상속받은 클래스에서도 프로퍼티에 접근할 수 있는 보안 레벨.
 - public : 인스턴스에서도 자유롭게 프로퍼티에 접근할 수 있는 보안 레벨.
+
+---
+
+## 타입스크립트 클래스로 사전 만들기
+```ts
+type Words = {
+    [key: string]: string
+}
+
+class Dict {
+    private words: Words
+    constructor() {
+        this.words = {}
+    }
+    add(word: Word) {
+        let term = word.term
+        if (this.words[term] === undefined) {
+            this.words[term] = word.def
+        }
+    }
+    delete(word: Word) {
+        let term = word.term
+        if (this.words.hasOwnProperty(term)) {
+            delete this.words[term]
+        }
+    }
+    show() {
+        console.log(this.words)
+    }
+}
+
+class Word {
+    constructor(
+        public term: string,
+        public def: string
+    ){}
+}
+
+const dict = new Dict()
+const kimchi = new Word('kimchi', '한국의 음식')
+const bibimbap = new Word('bibimbap', '한국의 소울푸드')
+
+dict.add(kimchi)
+dict.add(bibimbap)
+dict.delete(kimchi)
+dict.show()
+```
+
+- 클래스 자체를 타입으로 사용하는 것은 그 클래스로 만든 인스턴스의 타입을 의미한다.
+- constructor로 만들 프로퍼티가 아닌 경우, constructor 외부에 private, protected, public 등의 프로퍼티를 설정하고, constructor 내부에서 그 프로퍼티의 초기값을 설정해줄 수 있다.
