Update and rename 230926. 타입스크립트 클래스.md to 230926. 타입스크립트.md

--- a/TIL/230926. 타입스크립트.md
+++ b/TIL/230926. 타입스크립트.md
@@ -1,4 +1,5 @@
 ## abstract class
+
 ```ts
 abstract class User {
     constructor(
@@ -52,6 +53,7 @@ const Someone = new Designer('박', '디쟈이너', 'Designer')
 ---
 
 ## 타입스크립트 클래스로 사전 만들기
+
 ```ts
 type Words = {
     [key: string]: string
@@ -98,3 +100,70 @@ dict.show()
 
 - 클래스 자체를 타입으로 사용하는 것은 그 클래스로 만든 인스턴스의 타입을 의미한다.
 - constructor로 만들 프로퍼티가 아닌 경우, constructor 외부에 private, protected, public 등의 프로퍼티를 설정하고, constructor 내부에서 그 프로퍼티의 초기값을 설정해줄 수 있다.
+
+---
+
+## Type, Interface
+
+```ts
+// type
+type SetA = {
+    setA: string
+}
+
+type SetB = {
+    setB: string
+}
+
+type AtoB = SetA & SetB
+
+type BtoC = SetB & {
+    setC: string
+}
+
+const AtoB: AtoB = {
+    setA: "str",
+    setB: "str"
+}
+
+const BtoC:BtoC = {
+    setB: 'b',
+    setC: 'c'
+}
+
+// interface
+interface ClassA {
+    A: string
+}
+
+interface ClassAB extends ClassA {
+    B: string
+}
+
+interface Inherite {
+    One: string
+}
+
+interface Inherite {
+    Two: string
+}
+
+interface Inherite {
+    Three: string
+}
+
+const classAB: ClassAB = {
+    A: 'A',
+    B: 'B'
+}
+
+const inherite:Inherite = {
+    One: '1',
+    Two: '2',
+    Three: '3'
+}
+```
+
+- type을 사용하면 여러 자료형을 표현할 수 있다.
+- interface는 객체 지향을 표방한 방법으로써 객체의 형태만을 표현할 수 있다.
+- type은 집합 개념으로 타입을 확장시킬 수 있고, interface는 상속 개념으로 타입을 확장시킬 수 있다.
