--- a/TIL/230926. 타입스크립트.md
+++ b/TIL/230926. 타입스크립트.md
@@ -1,4 +1,4 @@
-## abstract class
+## 추상 클래스
 
 ```ts
 abstract class User {
@@ -167,3 +167,124 @@ const inherite:Inherite = {
 - type을 사용하면 여러 자료형을 표현할 수 있다.
 - interface는 객체 지향을 표방한 방법으로써 객체의 형태만을 표현할 수 있다.
 - type은 집합 개념으로 타입을 확장시킬 수 있고, interface는 상속 개념으로 타입을 확장시킬 수 있다.
+
+---
+
+## 추상 클래스와 인터페이스
+
+### 추상 클래스
+
+```ts
+abstract class User {
+    constructor(
+        protected firstName: string,
+        protected lastName: string
+    ){}
+    abstract sayHi(name:string): string
+    abstract fullName(): string
+}
+
+class Player extends User {
+
+    sayHi(name:string) {
+        return `안녕 ${this.lastName}`
+    }
+    fullName() {
+        return `${this.firstName} ${this.lastName}`
+    }
+}
+```
+
+JS로 트랜스파일 이후
+
+```js
+class User {
+    constructor(firstName, lastName) {
+        this.firstName = firstName;
+        this.lastName = lastName;
+    }
+}
+class Player extends User {
+    sayHi(name) {
+        return `안녕 ${this.lastName}`;
+    }
+    fullName() {
+        return `${this.firstName} ${this.lastName}`;
+    }
+}
+```
+
+- 추상클래스가 TS에서만 기능하더라도, 클래스의 종류 중 하나이므로 JS로 컴파일된 이후에도 class로 남아있게 된다.
+- 추상클래스를 구현할 클래스는 extends를 이용해 클래스를 확장한다.
+
+### 인터페이스
+
+```ts
+interface User {
+    firstName: string,
+    lastName: string,
+    health: number
+}
+
+interface UserAction {
+    sayHi(name:string): string
+    fullName(): string
+}
+
+class Player implements User, UserAction {
+    constructor(
+        public firstName: string,
+        public lastName: string,
+        public health: number
+    ){}
+
+    fullName() {
+        return `${this.firstName} ${this.lastName}`
+    }
+
+    sayHi(name: string) {
+        return `안녕 ${this.lastName}`
+    }
+}
+
+const makeUser = (userInfo: User): Player => {
+    return new Player(userInfo.firstName, userInfo.lastName, userInfo.health)
+}
+
+const 덕춘 = makeUser({
+    firstName: '김',
+    lastName: '태수',
+    health: 299792458
+})
+```
+
+- 트랜스파일링 이후
+
+```js
+class Player {
+    constructor(firstName, lastName, health) {
+        this.firstName = firstName;
+        this.lastName = lastName;
+        this.health = health;
+    }
+    fullName() {
+        return `${this.firstName} ${this.lastName}`;
+    }
+    sayHi(name) {
+        return `안녕 ${this.lastName}`;
+    }
+}
+const makeUser = (userInfo) => {
+    return new Player(userInfo.firstName, userInfo.lastName, userInfo.health);
+};
+const 덕춘 = makeUser({
+    firstName: '김',
+    lastName: '태수',
+    health: 299792458
+});
+```
+
+- 인터페이스는 타입스크립트에만 존재하므로, JS로 트랜스파일링 된 이후에는 인터페이스가 모두 사라진다.
+- 추상 클래스처럼 클래스를 확장하는 개념이 아니라, 인터페이스를 클래스로 구현한다는 개념이므로 extends 대신 implements 키워드를 이용한다.
+- 인터페이스로 클래스를 구현할 시, constructor의 프로퍼티에는 public만 허용된다.
+- 인터페이스는 곧 객체를 표현하는 장치이므로, 인터페이스를 이용해 객체의 타입을 명시해줄수도 있다.
