--- a/TIL/230926. 타입스크립트.md
+++ b/TIL/230926. 타입스크립트.md
@@ -288,3 +288,60 @@ const 덕춘 = makeUser({
 - 추상 클래스처럼 클래스를 확장하는 개념이 아니라, 인터페이스를 클래스로 구현한다는 개념이므로 extends 대신 implements 키워드를 이용한다.
 - 인터페이스로 클래스를 구현할 시, constructor의 프로퍼티에는 public만 허용된다.
 - 인터페이스는 곧 객체를 표현하는 장치이므로, 인터페이스를 이용해 객체의 타입을 명시해줄수도 있다.
+
+## 인터페이스와 제네릭을 이용한 폴리모피즘 구현
+
+```ts
+interface Note<T> {
+    [key:string]: T
+}
+
+class FillNote<T> {
+    constructor(
+    private note: Note<T> = {}    
+    ){}
+
+    set(key:string, value:T) {
+        this.note[key] = value
+    }
+
+    get(key:string) {
+        return this.note[key]
+    }
+
+    delete(key:string) {
+        delete this.note[key]
+    }
+
+    show() {
+        console.log(this.note)
+    }
+}
+
+const fillNoteWithBoolean = new FillNote<boolean>()
+fillNoteWithBoolean.set('참이슬', true)
+fillNoteWithBoolean.set('처음처럼', false)
+fillNoteWithBoolean.set('켈리', true)
+
+const fillNoteWithString = new FillNote<string>()
+fillNoteWithString.set('이덕', '춘')
+fillNoteWithString.set('이', '덕춘')
+
+const fillNoteWithAll = new FillNote()
+fillNoteWithAll.set('불리언', true)
+fillNoteWithAll.set('문자열', '문자열')
+fillNoteWithAll.set('숫자', 123)
+fillNoteWithAll.set('문자배열', ['ㄱ', 'ㄴ', 'ㄷ', 'ㄹ'])
+
+
+fillNoteWithBoolean.delete('참이슬')
+const isKellyTrue = fillNoteWithBoolean.get('켈리')
+console.log('켈리는 진또배기인가', isKellyTrue)
+fillNoteWithString.show()
+fillNoteWithBoolean.show()
+fillNoteWithAll.show()
+```
+
+- 제네릭은 플레이스홀더처럼 여겨야 한다.
+- 클래스의 선언부에 제네릭이 있으므로, 클래스를 선언할때는 제네릭도 함깨 채워주어야 한다.
+- 선언시 제네릭을 채워주지 않아도 상관은 없다. 다만 그럴 경우에는 클래스가 리턴하는 값의 타입이 unknown이 될 수 있다. (의도한 바이면 상관이 없겠지만)
