C: 컴파일러, 인터프리터

--- a/TIL/C/기초이론/자료형.md
+++ b/TIL/C/기초이론/자료형.md
@@ -23,6 +23,10 @@
   - 단정도(Float): 3.4F
   - 배정도(double): 123.1513
 
+## 문자와 문자열
+- 문자는 사실상 특정 숫자와 매칭된 **숫자**이다.
+- 문자열은 문자로 이루어진 **문자배열**이다.
+
 ## 변수(variable)의 정의
 - 변수 = 메모리
 - 앞으로 변경될 가능성이 있는 수 또는 미지수
