--- a/TIL/사진저장소.md
+++ b/TIL/사진저장소.md
@@ -1,3 +1,5 @@
 ![image](https://github.com/2duckchun/2duckchun/assets/92588154/18fd401b-638b-40f0-be42-015d767d3fc6)
 
 ![image](https://github.com/2duckchun/2duckchun/assets/92588154/33aa3b19-2b4c-4a60-94fc-80be0d373b03)
+
+![image](https://github.com/2duckchun/2duckchun/assets/92588154/74950cd8-7a38-49cf-96f7-0a2c7056990e)
