--- a/TIL/사진저장소.md
+++ b/TIL/사진저장소.md
@@ -3,3 +3,7 @@
 ![image](https://github.com/2duckchun/2duckchun/assets/92588154/33aa3b19-2b4c-4a60-94fc-80be0d373b03)
 
 ![image](https://github.com/2duckchun/2duckchun/assets/92588154/74950cd8-7a38-49cf-96f7-0a2c7056990e)
+
+![image](https://github.com/2duckchun/2duckchun/assets/92588154/f02da79b-360f-43c6-8f0f-3d033579a92c)
+
+![image](https://github.com/2duckchun/2duckchun/assets/92588154/848824b9-63f6-4448-ba87-39d80754dba7)
