--- a/TIL/사진저장소.md
+++ b/TIL/사진저장소.md
@@ -9,3 +9,5 @@
 ![image](https://github.com/2duckchun/2duckchun/assets/92588154/848824b9-63f6-4448-ba87-39d80754dba7)
 
 [![구글 로고](https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png)](https://www.google.com/)
+
+![image](https://github.com/2duckchun/2duckchun/assets/92588154/cf16eafa-d393-41af-ae8b-3925532596ec)
