--- a/TIL/사진저장소.md
+++ b/TIL/사진저장소.md
@@ -11,3 +11,5 @@
 [![구글 로고](https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png)](https://www.google.com/)
 
 ![image](https://github.com/2duckchun/2duckchun/assets/92588154/cf16eafa-d393-41af-ae8b-3925532596ec)
+
+![image](https://github.com/2duckchun/2duckchun/assets/92588154/6ad61aa0-5dd3-4a27-9036-c6b50dcb62dd)
