--- a/TIL/인터뷰/질문.md
+++ b/TIL/인터뷰/질문.md
@@ -6,6 +6,14 @@
 
 ### SSR, CSR, SSG란 무엇인가
 
-### fetch의 패턴
+### fetch를 효율적으로 사용하는 방법
 
 ### 동기 비동기 블로킹 논블로킹에 대한 질문
+
+### forEach와 for of의 차이
+
+### 개발이 뿌듯할때가 언제인가
+
+### 가장 일하고 싶은 동료와 일하기 싫은 동료가 누구인가
+
+### 렌더링 최적화에 대해 아는대로 설명해달라
