--- a/TIL/C++/2. 클래스와 객체/2. 생성자.md
+++ b/TIL/C++/2. 클래스와 객체/2. 생성자.md
@@ -39,3 +39,18 @@ class Circle {
     int Circle(double r); // 컴파일 오류
 }
 ```
+
+- 생성자 함수의 종료를 위해 리턴문을 사용할 수는 있지만 어떠한 값도 리턴해서는 안된다.
+```cpp
+Circle::Circle() {
+    // ....
+    return; // 정상적인 리턴문
+}
+
+Circle::Circle() {
+    // ....
+    return 0; // 컴파일 오류
+}
+```
+
+- 생성자는 중복 가능하다. 단 매개 변수 개수나 타입이 서로 다르게 선언되어야 한다.
