--- a/TIL/C++/2. 클래스와 객체/2. 생성자.md
+++ b/TIL/C++/2. 클래스와 객체/2. 생성자.md
@@ -54,3 +54,40 @@ Circle::Circle() {
 ```
 
 - 생성자는 중복 가능하다. 단 매개 변수 개수나 타입이 서로 다르게 선언되어야 한다.
+
+## 위임생성자(delegating constructor)와 타겟생성자(target constructor)
+
+```cpp
+#include <iostream>
+using namespace std;
+
+class Circle {
+public:
+	int radius;
+	Circle(); // 위임생성자
+	Circle(int r); // 타겟생성자
+	double getArea();
+};
+
+Circle::Circle() : Circle(1) { }; // 위임생성자의 타겟생성자 호출
+
+Circle::Circle(int r) {
+	this->radius = r;
+	cout << "반지름 " << this->radius << " 원 생성" << endl;
+}
+
+double Circle::getArea() {
+	return 3.14 * this->radius * this->radius;
+}
+
+int main() {
+	Circle donut; // 매개변수 없는 생성자 호출
+	double area = donut.getArea();
+	cout << "도넛 면적 " << area << endl;
+	
+	return 0;
+}
+```
+
+- C++ 11부터는 중복된 초기화 코드를 하나의 생성자로 몰고, 다른 생서자에서 이 생성자를 호출할 수 있게 한다.
+- 객체가 초기화될 때 Circle()이 호출되고, Circle()은 Circle(1)을 호출하여 radius는 1이 되고 화면에는 메세지가 출력된다.
