--- a/TIL/C++/2. 클래스와 객체/2. 생성자.md
+++ b/TIL/C++/2. 클래스와 객체/2. 생성자.md
@@ -91,3 +91,83 @@ int main() {
 
 - C++ 11부터는 중복된 초기화 코드를 하나의 생성자로 몰고, 다른 생서자에서 이 생성자를 호출할 수 있게 한다.
 - 객체가 초기화될 때 Circle()이 호출되고, Circle()은 Circle(1)을 호출하여 radius는 1이 되고 화면에는 메세지가 출력된다.
+
+## 생성자의 멤버 변수 초기화
+
+- 클래스의 멤버 변수들은 자동으로 초기화되지 않기 때문에 생성자에서 초기화한다.
+
+### 생성자 코드에서 멤버 변수 초기화
+
+```cpp
+#include <iostream>
+using namespace std;
+
+class Point {
+	int x, y;
+public:
+	Point();
+	Point(int a, int b);
+	int getX();
+};
+
+Point::Point() { x = 0; y = 0; }
+Point::Point(int a, int b) { x = a; y = b; }
+
+int Point::getX() {
+	return this->x;
+};
+
+
+int main() {
+	Point a;
+	Point b(1, 5);
+	cout << b.getX();
+	return 0;
+}
+```
+
+## 생성자 실습
+
+```cpp
+#include <iostream>
+
+using namespace std;
+
+class Rectangle {
+	int x = 0;
+	int y = 0;
+public:
+	Rectangle();
+	Rectangle(int a);
+	Rectangle(int a, int b);
+ 	bool isSquare();
+};
+
+Rectangle::Rectangle() : Rectangle(1) { }; // 위임생성자, 타겟생성자
+Rectangle::Rectangle(int a) {
+	this->x = a;
+	this->y = a;
+}
+Rectangle::Rectangle(int a, int b) {
+	this->x = a;
+	this->y = b;
+}
+
+bool Rectangle::isSquare() {
+	if (x == y) return true;
+	else return false;
+}
+
+
+int main() {
+	Rectangle rect1;
+	Rectangle rect2(3, 5);
+	Rectangle rect3(3);
+
+	if (rect1.isSquare()) cout << "rect1은 정사각형" << endl;
+	if (rect2.isSquare()) cout << "rect2은 정사각형" << endl;
+	if (rect3.isSquare()) cout << "rect3은 정사각형" << endl;
+
+	return 0;
+}
+```
