C++) 문자열 다루기

--- a/TIL/C++/3. 객체 배열, 객체 동적 생성/6. 문자열 다루기.md
+++ b/TIL/C++/3. 객체 배열, 객체 동적 생성/6. 문자열 다루기.md
@@ -20,3 +20,32 @@ int main() {
 ```
 
 - `compare` 함수는 두 문자열이 같으면 0, str보다 사전 순으로 앞에 오면 음수, 뒤에 오면 양수를 리턴한다.
+
+## 문자열 연결
+
+```cpp
+string a("I");
+a.append(" love"); // a = "I love"
+```
+
+## 문자열 삽입
+
+```cpp
+string a("I love C++");
+a.insert(2, "really "); // a = "I really love C++"
+a.replace(2, 11, "study") // a = "I study C++"
+```
+
+- a의 2번째 인덱스에 "really " 문자열 삽입(Insert)
+- a의 2번쨰 인덱스 ~ 11번째 인덱스를 study로 교체(replace)
+
+## 문자열 길이
+
+```cpp
+string a("I study C++");
+int length = a.length(); // 문자열의 갯수를 구한다. size와 같다.
+int size = a.size(); // 문자열의 갯수를 구한다. length와 같다.
+int capacity = a.capacity(); // 문자열 a의 현재 용량. 가변적이다.
+```
+
+
