C++) 문자열 다루기 3

--- a/TIL/C++/3. 객체 배열, 객체 동적 생성/6. 문자열 다루기.md
+++ b/TIL/C++/3. 객체 배열, 객체 동적 생성/6. 문자열 다루기.md
@@ -48,4 +48,35 @@ int size = a.size(); // 문자열의 갯수를 구한다. length와 같다.
 int capacity = a.capacity(); // 문자열 a의 현재 용량. 가변적이다.
 ```
 
+## 문자열 삭제
 
+```cpp
+string a("I love C++");
+a.erase(0, 7); // a = "C++"
+a.clear();
+```
+
+## 서브스트링
+
+```cpp
+string b = "I love C++";
+string c = b.substr(2, 4); // 2번째 인덱스부터 글자 4개, love
+string d = b.substr(2); // 2번째 인덱스에서 끝까지 리턴, love C++
+```
+
+## 문자열 검색
+
+```cpp
+string e = "I love love C++";
+int index = e.find("love"); // e에서 love 검색. 인덱스 2 리턴
+index = e.find("love", index + 1); // e의 인덱스 3부터 love 검색. 인덱스 7 리턴
+index = e.find("C#"); // -1 리턴 (발견할 수 없음)
+index = e.find("v", 7); // e의 인덱스 7부터 'v' 검색. 인덱스 9 리턴
+```
+
+## 문자열의 숫자 변환, stoi()
+
+```cpp
+string year = "2014";
+int n = stoi(year); // n은 정수 2014 값을 가짐
+```
