--- a/TIL/사진저장소.md
+++ b/TIL/사진저장소.md
@@ -17,3 +17,15 @@
 ![image](https://github.com/2duckchun/2duckchun/assets/92588154/70da94b5-8d9a-4f81-843c-1151dc1391ff)
 
 ![image](https://github.com/2duckchun/2duckchun/assets/92588154/80b4dbe1-272d-4cf0-8f71-a1d0b2b5a3ce)
+
+<img width="536" alt="image" src="https://github.com/user-attachments/assets/421aa65e-c757-4e64-b551-e4e6e51fd860">
+
+![image](https://github.com/user-attachments/assets/421aa65e-c757-4e64-b551-e4e6e51fd860:width=536)
+
+![image](https://github.com/user-attachments/assets/421aa65e-c757-4e64-b551-e4e6e51fd860){: width: "536" }
+
+<img width="313" alt="image" src="https://github.com/user-attachments/assets/f0fe6b81-6b8e-4d6d-b2b9-21c837500584">
+
+<img width="517" alt="image" src="https://github.com/user-attachments/assets/ecb1c27a-c8f8-4958-8f99-4342842f715b" />
+
+<img width="450" alt="image" src="https://github.com/user-attachments/assets/fbc49aac-81c2-4460-8384-9329247b0b69" />
