--- a/TIL/사진저장소.md
+++ b/TIL/사진저장소.md
@@ -29,3 +29,13 @@
 <img width="517" alt="image" src="https://github.com/user-attachments/assets/ecb1c27a-c8f8-4958-8f99-4342842f715b" />
 
 <img width="450" alt="image" src="https://github.com/user-attachments/assets/fbc49aac-81c2-4460-8384-9329247b0b69" />
+
+<img width="813" alt="image" src="https://github.com/user-attachments/assets/6d983f98-5394-4983-9abf-d2355810f2c9" />
+
+<img width="1371" alt="image" src="https://github.com/user-attachments/assets/173aec62-654d-44f0-9fd9-d0ccf81a0bf5" />
+
+<img width="945" alt="image" src="https://github.com/user-attachments/assets/c210cb1b-7182-49cc-9251-e627ac4b0f1e" />
+
+<img width="1429" alt="image" src="https://github.com/user-attachments/assets/27feb5b6-2b6b-4c53-9bc5-c945fefccbd3" />
+
+
