--- a/TIL/사진저장소.md
+++ b/TIL/사진저장소.md
@@ -38,4 +38,6 @@
 
 <img width="1429" alt="image" src="https://github.com/user-attachments/assets/27feb5b6-2b6b-4c53-9bc5-c945fefccbd3" />
 
+<img width="1000" alt="image" src="https://github.com/user-attachments/assets/f5d82865-5a40-41de-857a-76ca9421e7a6" />
+
 
