--- a/TIL/사진저장소.md
+++ b/TIL/사진저장소.md
@@ -40,4 +40,16 @@
 
 <img width="1000" alt="image" src="https://github.com/user-attachments/assets/f5d82865-5a40-41de-857a-76ca9421e7a6" />
 
+<img width="531" alt="image" src="https://github.com/user-attachments/assets/94e60ffe-c551-46a3-81a3-5b3e2295f4a6" />
+
+<img width="635" alt="image" src="https://github.com/user-attachments/assets/130ba4f7-2459-4e70-9145-ed1b89f7d270" />
+
+<img width="664" alt="image" src="https://github.com/user-attachments/assets/76fbb91a-d718-43d3-afd6-3966c546d764" />
+
+<img width="647" alt="image" src="https://github.com/user-attachments/assets/a01e6bae-a292-4238-bd1a-f009bf4a3ff5" />
+
+<img width="486" alt="image" src="https://github.com/user-attachments/assets/99c45ca0-f839-4a90-bfcb-825b019bb918" />
+
+
+
 
