--- a/TIL/사진저장소.md
+++ b/TIL/사진저장소.md
@@ -50,6 +50,14 @@
 
 <img width="486" alt="image" src="https://github.com/user-attachments/assets/99c45ca0-f839-4a90-bfcb-825b019bb918" />
 
+<img width="528" alt="image" src="https://github.com/user-attachments/assets/f365eead-5ce3-4e57-92f8-0b7cfcd9d247" />
+
+<img width="468" alt="image" src="https://github.com/user-attachments/assets/7a4d39d9-7366-498a-9686-c7bbaa5c36ea" />
+
+<img width="672" alt="image" src="https://github.com/user-attachments/assets/a81a9d9c-486e-4850-908d-0af7819ab7ad" />
+
+<img width="374" alt="image" src="https://github.com/user-attachments/assets/c7a5c6c6-808d-437a-a80e-08a25ae23eed" />
+
 
 
 
